Improve the virtual scroll; Avoid error when getting the network details and they come null; Align left the items from network page

--- a/src/assets/styles/virtual-scroll-table.scss
+++ b/src/assets/styles/virtual-scroll-table.scss
@@ -75,12 +75,12 @@
 
   .active-filters-row {
     display: flex;
-    padding: 6px 0;
+    padding: 6px 7px;
   }
 
   .filters-row {
     display: flex;
-    padding: 5px;
+    padding: 5px 11px;
     //height: 26px;
   }
 
@@ -236,7 +236,7 @@
   border-top: 1px solid #333334;
   width: 100%;
   line-height: 40px;
-  padding-left: 4px;
+  padding-left: 16px;
   font-size: 14px;
 
   background: #464648;
@@ -347,7 +347,6 @@
   &.virtualScrollRowEven {
     //background-color: #323334;
     background-color: rgba(255, 255, 255, 0.1);
-
 
     .item-loading {
       background-color: #2a2a2e !important;
